# cgc

./: CMakeLists.txt  LICENSE  README.md
cgc/: CMakeLists.txt  cgc.cpp  cgc.hpp
cgc/core/: Object3D.cpp  Object3D.hpp  Prim.hpp
